--- a/code/Cleaning and EDA-Copy1.ipynb
+++ b/code/Cleaning and EDA-Copy1.ipynb
@@ -3993,20 +3993,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14197, 5)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# summary_and_visit_df.shape"
    ]
@@ -4017,7 +4006,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_and_visit_df.to_csv(\"../data/sum_visit\")"
+    "# summary_and_visit_df.to_csv(\"../data/sum_visit\")"
    ]
   },
   {
@@ -4026,272 +4015,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_a1c_df.to_csv(\"../data/sum_obs\")"
+    "# date_a1c_df.to_csv(\"../data/sum_obs\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>visit_date</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>num_visits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2017-07-19</td>\n",
-       "      <td>followup diabetes, med refill</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2017-07-28</td>\n",
-       "      <td>f/u lab results, DM2, HLD</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2017-11-08</td>\n",
-       "      <td>DM and dyslipidemia follow-up</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2018-02-16</td>\n",
-       "      <td>Uncontrolled DM</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2018-05-02</td>\n",
-       "      <td>DM - hypoglycemia- dec. glyburide</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2018-09-28</td>\n",
-       "      <td>Poorly controlled DM, osteoarthritis right thu...</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-01-18</td>\n",
-       "      <td>Diabetes follow up</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-05-17</td>\n",
-       "      <td>f/u DM2, HLD</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-12-09</td>\n",
-       "      <td>DM (A1c 7.1%), needs PPSV23/PCV13 vaccines</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>Worse a1c 8.2 from 7, no new meds, repeat lipids</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    patient_id  age visit_date  \\\n",
-       "0           72   56 2017-07-19   \n",
-       "6           72   56 2017-07-28   \n",
-       "12          72   56 2017-11-08   \n",
-       "18          72   56 2018-02-16   \n",
-       "24          72   56 2018-05-02   \n",
-       "30          72   56 2018-09-28   \n",
-       "36          72   56 2019-01-18   \n",
-       "40          72   56 2019-05-17   \n",
-       "44          72   56 2019-12-09   \n",
-       "48          72   56 2020-01-03   \n",
-       "\n",
-       "                                              summary num_visits  \n",
-       "0                       followup diabetes, med refill         10  \n",
-       "6                           f/u lab results, DM2, HLD         10  \n",
-       "12                      DM and dyslipidemia follow-up         10  \n",
-       "18                                    Uncontrolled DM         10  \n",
-       "24                  DM - hypoglycemia- dec. glyburide         10  \n",
-       "30  Poorly controlled DM, osteoarthritis right thu...         10  \n",
-       "36                                 Diabetes follow up         10  \n",
-       "40                                       f/u DM2, HLD         10  \n",
-       "44         DM (A1c 7.1%), needs PPSV23/PCV13 vaccines         10  \n",
-       "48   Worse a1c 8.2 from 7, no new meds, repeat lipids         10  "
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "summary_and_visit_df.loc[summary_and_visit_df[\"patient_id\"]==72]"
+    "# summary_and_visit_df.loc[summary_and_visit_df[\"patient_id\"]==72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 209,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>obs_date</th>\n",
-       "      <th>date_of_a1c</th>\n",
-       "      <th>ac1_level</th>\n",
-       "      <th>num_obs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2017-07-21</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>uncontrolled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-01-19</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>controlled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2018-02-08</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>uncontrolled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2017-10-20</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>controlled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-06-08</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>controlled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>72</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2019-12-09</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>uncontrolled</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   patient_id  age   obs_date  date_of_a1c     ac1_level num_obs\n",
-       "0          72   56 2017-07-21          8.1  uncontrolled       6\n",
-       "1          72   56 2019-01-19          7.6    controlled       6\n",
-       "2          72   56 2018-02-08          8.3  uncontrolled       6\n",
-       "3          72   56 2017-10-20          7.7    controlled       6\n",
-       "4          72   56 2019-06-08          7.1    controlled       6\n",
-       "5          72   56 2019-12-09          8.2  uncontrolled       6"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "date_a1c_df.loc[date_a1c_df[\"patient_id\"]==72]"
+    "# date_a1c_df.loc[date_a1c_df[\"patient_id\"]==72]"
    ]
   },
   {
@@ -4594,7 +4336,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "array_of_ids= np.unique(summary_and_visit_df[\"patient_id\"].values)"
+   ]
   },
   {
    "cell_type": "code",
