--- a/code/6_Exploratory_Data_Analysis .ipynb
+++ b/code/6_Exploratory_Data_Analysis .ipynb
@@ -343,7 +343,9 @@
     "ax.scatter(x=new_df[\"avg_time_between_visits\"], y=new_df[\"avg_a1c\"])\n",
     "plt.ylabel('a1c', fontsize=13)\n",
     "plt.xlabel('avg_time_between_visits', fontsize=13)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#clustering analysis on this \n",
+    "#"
    ]
   },
   {
