--- a/code/1_Data_Clean.ipynb
+++ b/code/1_Data_Clean.ipynb
@@ -315,6 +315,7 @@
     }
    ],
    "source": [
+    "#check to see what types of insurance exist in the data\n",
     "df[\"insurance\"].value_counts()"
    ]
   },
@@ -432,16 +433,6 @@
    "source": [
     "#check datatypes: are the columns meant to be numerical, numerical? Are the dates in the dataframe datetime datatypes? \n",
     "df_no_ins.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for objects that need to be converted into floats, none in the original dtype\n",
-    "# convert = lambda x: float(x)"
    ]
   },
   {
@@ -633,6 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#replace .089 with 8.9 \n",
     "df_no_ins[\"a1c\"].where(df_no_ins[\"a1c\"]!= 0.08900000000000001, 8.9,inplace=True)"
    ]
   },
@@ -671,6 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#creating a mask so we can drop \n",
     "mask= df_no_ins.loc[df_no_ins[\"a1c\"]== 1.7]"
    ]
   },
@@ -1147,15 +1140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#save to csv so we can use it for splitting and EDA\n",
     "df_no_ins.to_csv(\"../data/cleaned_data.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
