--- a/code/2_Data_Clean_and_Split.ipynb
+++ b/code/2_Data_Clean_and_Split.ipynb
@@ -175,7 +175,8 @@
     }
    ],
    "source": [
-    "new_data.dtypes"
+    "new_data.dtypes\n",
+    "#check the datatypes"
    ]
   },
   {
@@ -184,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#change datatypes to correct type \n",
     "new_data['visit_date'] = pd.to_datetime(new_data['visit_date'])"
    ]
   },
@@ -407,13 +409,6 @@
    "source": [
     "date_a1c_df.to_csv(\"../data/date_a1c_df\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
