--- a/code/3_Feature_Engineering.ipynb
+++ b/code/3_Feature_Engineering.ipynb
@@ -126,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#turn datetime object to a float so we can use it for modelling \n",
     "def split_dates(dates_obj):\n",
     "    if dates_obj:\n",
     "        to_string=str(dates_obj)\n",
@@ -150,6 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get the average time between visits for each patient\n",
     "values_time= sorted_sum.groupby(by='patient_id',as_index=False)['time_between_visits'].mean()"
    ]
   },
@@ -171,6 +173,7 @@
     }
    ],
    "source": [
+    "#create a column to add average time between visits for each patient\n",
     "sorted_sum[\"avg_time_between_visits\"]=\"\"\n",
     "\n",
     "for x in range(sorted_sum.shape[0]):\n",
@@ -191,13 +194,6 @@
    "source": [
     "sorted_sum.to_csv(\"../data/ss.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
