--- a/code/6_Exploratory_Data_Analysis .ipynb
+++ b/code/6_Exploratory_Data_Analysis .ipynb
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Average time between visits and average a1c seems to give a similar looking graph"
+    "Average time between visits and average a1c seems to follow a similar pattern"
    ]
   },
   {
@@ -601,6 +601,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clustering to see if we can find any patterns in our data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -789,6 +796,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clustering by average time between visits: we see there is a pattern in how much time patients take to come back for a visit, but this doesn't show a difference in their a1c levels. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -911,6 +925,13 @@
    "source": [
     "plt.figure(figsize=(10, 10))\n",
     "plt.scatter(cluster_data.avg_a1c, cluster_data.num_visits, c=km.labels_, s=1, cmap=\"tab20\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like there is a grouping of people in orange with number of visits at or below 5 and a1c is at or below 10. "
    ]
   }
  ],
