--- a/code/5_Feature_Engineering.ipynb
+++ b/code/5_Feature_Engineering.ipynb
@@ -175,6 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create a new dataframe so that we have one row per patient with average a1c,average time between visits, age, and number of visits\n",
     "new_df = df[['patient_id', 'age',\"num_visits\",\"avg_time_between_visits\",\"avg_a1c\"]].copy()"
    ]
   },
@@ -411,6 +412,8 @@
     }
    ],
    "source": [
+    "#add whether the patient's average a1c is classified as our positive class (1,controlled) or negative class (0,uncontrolled)\n",
+    "\n",
     "new_df[\"avg_control_level\"]=\"\"\n",
     "\n",
     "for i in range(new_df.shape[0]):\n",
@@ -546,6 +549,8 @@
     }
    ],
    "source": [
+    "# add it number of observations per patient \n",
+    "\n",
     "new_df[\"num_obs\"]=\"\"\n",
     "\n",
     "for x in range(data_a1c_df.shape[0]):\n",
@@ -572,13 +577,6 @@
    "source": [
     "new_df.to_csv(\"../data/new_df\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
