--- a/code/8_NLP.ipynb
+++ b/code/8_NLP.ipynb
@@ -160,11 +160,7 @@
     }
    ],
    "source": [
-    "new_df.head()\n",
-    "\n",
-    "\n",
-    "#count how many times they are controlled vs uncontrolled in each individual visit\n",
-    "#frequency instead of average "
+    "new_df.head()"
    ]
   },
   {
@@ -228,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add all the summary text together for each patient "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -256,6 +259,13 @@
    "source": [
     "df_grouped = sorted_sum.groupby(['patient_id'],as_index=False)['summary'].sum()\n",
     "print(df_grouped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add a column to put all this text in for each patient "
    ]
   },
   {
@@ -426,13 +436,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add to the set of stopwords, including numbers  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add to the set of stopwords as you see fit\n",
-    "\n",
     "cvec_combined = CountVectorizer(stop_words = ENGLISH_STOP_WORDS.union({\n",
     "    'and',\n",
     "    'for',\n",
@@ -442,6 +457,13 @@
     "    \"10\"\n",
     "    \n",
     "}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stem the words, although this might be tedious given the type of text we have in the summary for each patient"
    ]
   },
   {
@@ -1504,7 +1526,14 @@
    ],
    "source": [
     "df_combined.sum().sort_values(ascending = True).tail(20).plot(kind = 'barh',figsize=(10,8))\n",
-    "#look at controlled vs uncontrolled split to look at top words /remove numerical"
+    "#look at most freuquently used words for patient summaries "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at most freuquently used words in patients who were on average controlled "
    ]
   },
   {
@@ -1513,9 +1542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_df_controlled= new_df.loc[new_df[\"avg_control_level\"]==1, [\"clean_text\"]]\n",
-    "\n",
-    "# cvec_combined.fit(new_df['clean_text'])"
+    "new_df_controlled= new_df.loc[new_df[\"avg_control_level\"]==1, [\"clean_text\"]]"
    ]
   },
   {
@@ -1626,6 +1653,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at most frequently used words in uncontrolled group"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -1721,7 +1755,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Words like hypertension, diabetes, lab, check and refill appear to be in both controlled and uncontrolled groups. I didn't see any major differences in language used for each type of patient. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, I used both CountVectorizer and TfidVectorizer and MultinomialNB to see which transformer would give the best result, and including stop words and no stop words. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "We used the \"clean_text\" feature to predict whether or not the patient was 0(uncontrolled) or 1 (controlled). The clean_text feature was the stemmed version of all the summary text summed together from the pati\n",
+    "We train/test/split and created a pipeline and gridsearch using both CountVectorizer and TfidVectorizer with MultinomialNB to see which transformer would give the best result. \"The multinomial Naive Bayes classifier is suitable for classification with discrete features (e.g., word counts for text classification).\"\n",
+    "Since this model didn't perform that much better than our baseline score,"
    ]
   },
   {
