--- a/code/7_Modeling.ipynb
+++ b/code/7_Modeling.ipynb
@@ -703,6 +703,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I used gridsearch to find the best estimator and hyperparameters. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -953,7 +960,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The following code is taken directly from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
     "\n",
     "clf = RandomForestClassifier(n_jobs=-1)\n",
     "\n",
@@ -977,6 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65 \n",
     "def grid_search_wrapper(refit_score='precision_score'):\n",
     "    \"\"\"\n",
     "    fits a GridSearchCV classifier using refit_score for optimization\n",
@@ -1028,6 +1036,7 @@
     }
    ],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
     "grid_search_clf = grid_search_wrapper(refit_score='precision_score')"
    ]
   },
@@ -1150,6 +1159,7 @@
     }
    ],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65 \n",
     "results = pd.DataFrame(grid_search_clf.cv_results_)\n",
     "results = results.sort_values(by='mean_test_precision_score', ascending=False)\n",
     "results[['mean_test_precision_score', 'mean_test_recall_score', 'mean_test_accuracy_score', 'param_max_depth', 'param_max_features', 'param_min_samples_split', 'param_n_estimators']].round(3).head()"
@@ -1183,6 +1193,7 @@
     }
    ],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
     "grid_search_clf = grid_search_wrapper(refit_score='recall_score')"
    ]
   },
@@ -1192,6 +1203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
     "results = pd.DataFrame(grid_search_clf.cv_results_)\n",
     "results = results.sort_values(by='mean_test_precision_score', ascending=False)"
    ]
@@ -1315,6 +1327,7 @@
     }
    ],
    "source": [
+    "#The following code is taken from Kevin Arvai's post on how to optimize for sensitivity: https://towardsdatascience.com/fine-tuning-a-classifier-in-scikit-learn-66e048c21e65\n",
     "results[['mean_test_precision_score', 'mean_test_recall_score', 'mean_test_accuracy_score', 'param_max_depth', 'param_max_features', 'param_min_samples_split', 'param_n_estimators']].round(3).head()"
    ]
   },
