--- a/code/8_NLP.ipynb
+++ b/code/8_NLP.ipynb
@@ -1773,12 +1773,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used the \"clean_text\" feature to predict whether or not the patient was 0(uncontrolled) or 1 (controlled). The clean_text feature was the stemmed version of all the summary text summed together from the pati\n",
-    "We train/test/split and created a pipeline and gridsearch using both CountVectorizer and TfidVectorizer with MultinomialNB to see which transformer would give the best result. \"The multinomial Naive Bayes classifier is suitable for classification with discrete features (e.g., word counts for text classification).\"\n",
-    "Since this model didn't perform that much better than our baseline score,"
+    "We used the \"clean_text\" feature to predict whether or not the patient was 0(uncontrolled) or 1 (controlled). The clean_text feature was the stemmed version of all the summary text summed together from the patient's every visit. \n",
+    "\n",
+    "We train/test/split and created a pipeline and gridsearch using both CountVectorizer and TfidVectorizer with MultinomialNB to see which transformer would give the best result."
    ]
   },
   {
@@ -2324,6 +2324,13 @@
    "source": [
     "pd.DataFrame(data = cm, columns = ['Predict Postitive', 'Predict Negative'],\n",
     "             index = ['Actual Positive', 'Actual Negative'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelling using NLP still doesn't perform that much better than our baseline score"
    ]
   },
   {
