--- a/code/4_Feature_Engineering.ipynb
+++ b/code/4_Feature_Engineering.ipynb
@@ -424,6 +424,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I am adding average a1c for each patient as a feature. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -14770,15 +14777,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#save this to a csv\n",
     "sorted_sum.to_csv(\"../data/sorted_sum_data.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
