--- a/code/5_Feature_Engineering.ipynb
+++ b/code/5_Feature_Engineering.ipynb
@@ -390,6 +390,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add column to indicate whether the patient's average a1c is classified as our positive class (1,controlled) or negative class (0,uncontrolled)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -412,8 +419,6 @@
     }
    ],
    "source": [
-    "#add whether the patient's average a1c is classified as our positive class (1,controlled) or negative class (0,uncontrolled)\n",
-    "\n",
     "new_df[\"avg_control_level\"]=\"\"\n",
     "\n",
     "for i in range(new_df.shape[0]):\n",
