--- a/code/7_Modeling.ipynb
+++ b/code/7_Modeling.ipynb
@@ -468,6 +468,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens when we add age and number of observations to our features list? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -548,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our score does not improve after using rounded a1c levels. "
+    "Our score does not improve after using rounded a1c levels. It is also worth noting that with this type of data, it is unlikely that all MLR assumptions are being met. "
    ]
   },
   {
@@ -681,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The score we get here isn't significantly better than our baseline score of .60 in the negative class, but we can make a few inferences: "
+    "The score we get here isn't significantly better than our baseline score of .60 in the negative class, but we can make a few (relatively unhelpful) inferences: "
    ]
   },
   {
