--- a/code/8_NLP.ipynb
+++ b/code/8_NLP.ipynb
@@ -1297,6 +1297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add this to a column in our most updated dataframe that we can use for modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
@@ -1484,6 +1491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transform column \n",
     "combined_wordcounts = cvec_combined.transform(new_df['clean_text'])"
    ]
   },
@@ -1493,6 +1501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#put into a dataframe \n",
     "df_combined = pd.DataFrame(combined_wordcounts.toarray(), columns = cvec_combined.get_feature_names())"
    ]
   },
@@ -1533,7 +1542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at most freuquently used words in patients who were on average controlled "
+    "Look at most freuquently used words in patients who were on average controlled following the same process as above"
    ]
   },
   {
@@ -1599,6 +1608,7 @@
     }
    ],
    "source": [
+    "#fit to countvectorizer \n",
     "cvec_combined.fit(new_df_controlled['clean_text'])"
    ]
   },
@@ -1769,14 +1779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, I used both CountVectorizer and TfidVectorizer and MultinomialNB to see which transformer would give the best result, and including stop words and no stop words. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We used the \"clean_text\" feature to predict whether or not the patient was 0(uncontrolled) or 1 (controlled). The clean_text feature was the stemmed version of all the summary text summed together from the patient's every visit. \n",
+    "Here, I used both CountVectorizer and TfidVectorizer and MultinomialNB to see which transformer would give the best result, and including stop words and no stop words. We used the \"clean_text\" feature to predict whether or not the patient was 0(uncontrolled) or 1 (controlled). The clean_text feature was the stemmed version of all the summary text summed together from the patient's every visit. \n",
     "\n",
     "We train/test/split and created a pipeline and gridsearch using both CountVectorizer and TfidVectorizer with MultinomialNB to see which transformer would give the best result."
    ]
@@ -2135,42 +2138,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('tvec',\n",
-       "                 TfidfVectorizer(analyzer='word', binary=False,\n",
-       "                                 decode_error='strict',\n",
-       "                                 dtype=<class 'numpy.float64'>,\n",
-       "                                 encoding='utf-8', input='content',\n",
-       "                                 lowercase=True, max_df=1.0, max_features=500,\n",
-       "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
-       "                                 preprocessor=None, smooth_idf=True,\n",
-       "                                 stop_words=None, strip_accents=None,\n",
-       "                                 sublinear_tf=False,\n",
-       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                                 tokenizer=None, use_idf=True,\n",
-       "                                 vocabulary=None)),\n",
-       "                ('mnb',\n",
-       "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
-       "         verbose=False)"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tvec_model"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 189,
    "metadata": {},
    "outputs": [
@@ -2330,15 +2297,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modelling using NLP still doesn't perform that much better than our baseline score"
+    "Modelling using NLP still doesn't perform that much better than our baseline score. However, it looks like we were able to optimize for sensitivity using NLP. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
